--- a/Parser.cabal
+++ b/Parser.cabal
@@ -31,8 +31,11 @@ executable Parser-exe
 test-suite Parser-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
-  main-is:             Spec.hs
+  main-is:             SpecMain.hs
+  other-modules:     SpecHU, SpecQC
   build-depends:       base
+                     , HUnit
+                     , QuickCheck
                      , Parser
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
