--- a/Parser.cabal
+++ b/Parser.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib, CParser, Lexer, AST
+  exposed-modules:     CParser, Lexer, AST
   build-depends:       base >= 4.7 && < 5
                      , parsec
   default-language:    Haskell2010
@@ -32,7 +32,7 @@ test-suite Parser-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             SpecMain.hs
-  other-modules:     SpecHU, SpecQC
+  other-modules:     SpecHU, SpecQC, SpecPrintHU
   build-depends:       base
                      , HUnit
                      , QuickCheck
