--- a/Parser.cabal
+++ b/Parser.cabal
@@ -37,6 +37,7 @@ test-suite Parser-test
                      , HUnit
                      , QuickCheck
                      , Parser
+                     , random
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
